# UniFFISwiftFramework

./: .gitignore  Cargo.toml  Package.swift  README.md  build-swift.sh  clean.sh  install-swift.sh
framework/Sources/: uniffi_swift_framework.swift
framework/uniffi_swift_frameworkFFI.xcframework/: Info.plist
framework/uniffi_swift_frameworkFFI.xcframework/ios-arm64/Headers/: module.modulemap
framework/uniffi_swift_frameworkFFI.xcframework/macos-arm64/Headers/: uniffi_swift_frameworkFFI.h
src/: lib.rs
