[package]
name = "uniffi_swift_framework"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
name = "uniffi_swift_framework"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.29", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.29", features = [ "build" ] }
